# AlphaPente

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CPP_IMPLEMENTATION_PLAN.md  Makefile  Optimization.md  ParallelDesign.md  ParallelSessionInfo.txt  README.md  README_v2_pipeline.md  conanfile.txt  db.py  debug_heuristic.py  debug_mcts_tree.cpp  demo_ai_effectiveness.py  evaluate_model.py  game.py  generate.py  generate_v2.py  init_models.sh  main.py  mcts.py  opening_moves.csv  opening_moves_L9.csv  parallel.py  performance_optimization_plan.md  play.py  prompt.txt  query.ipynb  requirements.txt  run_web.py  schedule_v2.sh  settings.json  settings_loader.py  setup.sh  test_ai_demo.py  todo.txt  train.py  train_v2.py  (+2 more)
apps/: Benchmark.cpp  Compete.cpp  Generate.cpp  Gomoku.cpp  Inspect.cpp  KeryoPente.cpp  Pente.cpp  Play.cpp  Renju.cpp  Test.cpp  Train.cpp  TrainCommon.hpp
checkpoints/: GomokuSimpleNN.pt
checkpoints/pente/: best_model.pt  buffer.pt
config/: pipeline.json
cpp_plan/: 01_project_setup.md  02_core_data_structures.md  03_win_detection_logic.md  04_capture_detection_system.md  05_move_system_and_undo.md  06_distance_ring_precompute.md  07_move_generation_system.md  08_basic_mcts_node_structure.md  09_rollout_policy.md  10_mcts_engine.md  11_tree_reuse.md  12_integration_testing.md  13_main_app.md  14_benchmarking.md
docs/: NNEvaluator.md  misc.md
evaluation/: benchmark_suite.py  performance_tracker.py  skill_levels.py
include/: Arena.hpp  BitBoard.hpp  Evaluator.hpp  GameUtils.hpp  MCTS.hpp  NNInputEncoder.hpp  NNModel.hpp  NeuralNetEvaluator.hpp  PNS.hpp  ParallelMCTS.hpp  PenteGame.hpp  Profiler.hpp  RenjuForbiddenPointFinder.hpp  RenjuRules.hpp  SelfPlay.hpp  TranspositionTable.hpp  Zobrist.hpp
include/core/: bitboard.hpp  distance_rings.hpp  game_state.hpp  move_delta.hpp  move_generator.hpp
include/mcts/: mcts_engine.hpp  mcts_node.hpp  rollout.hpp
include/utils/: memory_pool.hpp
issues/: generate-win-loss-draw-summary-misleading-at-low-alpha.md
models/: gomoku_resnet.py  gomoku_simple_nn.py
old_include/core/: bitboard.hpp  move_delta.hpp  move_generator.hpp
old_include/mcts/: mcts_engine.hpp  mcts_node.hpp  rollout.hpp
old_include/utils/: timer.hpp
old_src/: main.cpp
old_src/core/: game_state.cpp
old_src/mcts/: mcts_node.cpp
old_tests/integration/: test_is_agent_dumb.cpp
old_tests/unit/: test_capture_detection.cpp  test_distance_rings.cpp  test_mcts_engine.cpp  test_move_generator.cpp  test_rollout.cpp
python_archive/: PROJECT_DOCUMENTATION.md
python_archive/tests/: test_bitboard.py  test_distance_rings.py
reports/: ParallelMCTS.md
reports/pente/: benchmark.csv  fpu-value-head-investigation.md
scripts/: benchmark_report.py  bootstrap_generate.sh  bootstrap_train.sh  check_bootstrap.sh  detect_system_specs.sh  generate_bootstrap.sh  generate_tests.py  opening_book.py  reset_training.sh  review.py  train_loop.sh
specs/: 01_OVERVIEW.md  02_BITBOARD.md  03_DISTANCE_RINGS.md  04_MCTS.md  05_OPTIMIZATIONS.md  06_EVALUATION.md
src/: BitBoard.cpp  Evaluator.cpp  GameUtils.cpp  MCTS.cpp  NNEvaluator.cpp  NNInputEncoder.cpp  NNModel.cpp  NeuralNetEvaluator.cpp  ParallelMCTS.cpp  PenteGame.cpp  RenjuRules.cpp  SelfPlay.cpp  Zobrist.cpp  main.cpp
src/core/: bitboard.cpp  bitboard.py  distance_rings.cpp  distance_rings.py  game_state.cpp  move_delta.py  move_generator.cpp  move_generator.py
src/games/: base_game.py  pente.py
src/mcts/: __init__.py  engine.py  mcts.py  mcts_engine.cpp  mcts_node.cpp  move_heuristic.py  node.py  rollout.cpp  rollout.py
src/players/: base_player.py
src/web/: game_controller.py
tests/: AugmentTests.cpp  BitBoardTests.cpp  CMakeLists.txt  MCTSParallelTests.cpp  NNInputEncoderTests.cpp  ParallelMCTSTests.cpp  PenteGameTests.cpp  README.md  RenjuTests.cpp  SelfPlayPolicyTests.cpp  SelfPlayTests.cpp  open-three-suite.json  test_ai_blocking_integration.py  test_ai_tactics.py  test_game.py  test_gomoku_simple.py  test_mcts_analysis.py  test_mcts_blocking.py  test_mcts_components.py  test_mcts_engine.py  test_mcts_optimization.py  test_move_heuristic.py  test_pente_legal_moves.py  test_resnet_integration.py  test_scaled_valuation.py  value-suite.json
tests/integration/: test_complete_games.cpp  test_is_agent_dumb.cpp
tests/unit/: test_bitboard.cpp  test_mcts_node.cpp  test_move_generator.cpp  test_tree_reuse.cpp  test_win_detection.cpp
v1/: README_evaluation.md  config_loader.py  db.py  generate.py  mcts.py  parallel-copy.py  play.py  query.py  schedule.sh  settings.json  settings_loader.py  train.py  tree_view.py
v1/checkpoints/: simple_model.pt
v1/evaluation/: __init__.py  benchmark_suite.py  performance_tracker.py
v1/tests/: conftest.py  test_game.py  test_gomoku_simple.py  test_mcts_nn_integration.py
v2/: README.md  debug_edge.py  debug_mcts_priority.py  debug_open_three.py  test_final_analysis.py
v2/src/: __init__.py
v2/src/core/: game_state.py
v2/src/games/: __init__.py  pente.py
v2/src/players/: __init__.py  human_player.py  mcts_player.py
v2/src/web/: app.py
v2/src/web/static/css/: style.css
v2/src/web/static/js/: game.js
v2/tests/: test_diagonal_heuristics.py  test_mcts_blocking.py  test_move_delta.py  test_move_heuristic.py  test_performance_comparison.py
v3/tests/: test_game_state.py  test_move_generator.py
